istio/acme-gateways.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    annotations:
      meta.helm.sh/release-name: acme1management
      meta.helm.sh/release-namespace: acme1-istio-test
    creationTimestamp: "2023-07-14T19:23:56Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
    name: acme1management-gateway
    namespace: acme1-istio-test
    resourceVersion: "65944"
    uid: 82e09bd0-c6d0-45e5-88da-91762b0a6165
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - acme1management.btcloudentitypoc.net
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
    - hosts:
      - acme1management.btcloudentitypoc.net
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: acme-istio-test-tls-secret
        mode: SIMPLE
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    annotations:
      meta.helm.sh/release-name: acme2management
      meta.helm.sh/release-namespace: acme2-istio-test
    creationTimestamp: "2023-07-14T19:23:57Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
    name: acme2management-gateway
    namespace: acme2-istio-test
    resourceVersion: "65971"
    uid: 42470ea8-6d47-4fac-84ed-9511ed8f787c
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - acme2management.btcloudentitypoc.net
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
    - hosts:
      - acme2management.btcloudentitypoc.net
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: acme-istio-test-tls-secret
        mode: SIMPLE
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    annotations:
      meta.helm.sh/release-name: acme3management
      meta.helm.sh/release-namespace: acme3-istio-test
    creationTimestamp: "2023-07-14T19:23:58Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
    name: acme3management-gateway
    namespace: acme3-istio-test
    resourceVersion: "66013"
    uid: 7cde1db4-79c8-49b0-9258-c32fc334b542
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - acme3management.btcloudentitypoc.net
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
    - hosts:
      - acme3management.btcloudentitypoc.net
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: acme-istio-test-tls-secret
        mode: SIMPLE
kind: List
metadata:
  resourceVersion: ""
